<resources>
    <string name="app_name">Spent Travel</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="gasto_total">Seu gasto total será de</string>
</resources>